{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 173,
  "lineage": "05da385a-6c9b-3865-2fef-1b6f0298513a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev-api-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f767d95ada739eef",
            "association_id": "eipassoc-0c88db5e4c99a5653",
            "domain": "vpc",
            "id": "eipalloc-0f767d95ada739eef",
            "instance": "i-0b24d7a1c5e608834",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c6116f7da9db1a4a",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-3-209-201-237.compute-1.amazonaws.com",
            "public_ip": "3.209.201.237",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "paul-elastic-ip"
            },
            "tags_all": {
              "Name": "paul-elastic-ip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.dev-api",
            "aws_internet_gateway.dev-gateway",
            "aws_network_interface.server-nic",
            "aws_security_group.dev-sg",
            "aws_subnet.dev-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02427555b9847373a",
            "association_id": "eipassoc-0fc62ae2ea2503552",
            "domain": "vpc",
            "id": "eipalloc-02427555b9847373a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d2134114f695dbdf",
            "private_dns": "ip-10-0-0-126.ec2.internal",
            "private_ip": "10.0.0.126",
            "public_dns": "ec2-44-214-192-137.compute-1.amazonaws.com",
            "public_ip": "44.214.192.137",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "paul-lb-ip"
            },
            "tags_all": {
              "Name": "paul-lb-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev-api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fec2c2e2017f4e7b",
            "arn": "arn:aws:ec2:us-east-1:323170648141:instance/i-0b24d7a1c5e608834",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b24d7a1c5e608834",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "staging-peerpal-chat-api-ssh",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0c6116f7da9db1a4a"
              }
            ],
            "primary_network_interface_id": "eni-0c6116f7da9db1a4a",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_ip": "10.0.0.10",
            "public_ip": "3.209.201.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:323170648141:key/b17aebf4-9292-44dd-b0cb-10813bcb0cf1",
                "throughput": 125,
                "volume_id": "vol-0cb524e1c3ede4402",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09050b3fce9bb775c",
            "tags": {
              "Name": "paul-dev-api"
            },
            "tags_all": {
              "Name": "paul-dev-api"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bdb6a8b54ce7b277"
            ]
          },
          "dependencies": [
            "aws_network_interface.server-nic",
            "aws_security_group.dev-sg",
            "aws_subnet.dev-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323170648141:internet-gateway/igw-0f15f5f6074195611",
            "id": "igw-0f15f5f6074195611",
            "owner_id": "323170648141",
            "tags": {
              "Name": "paul-gateway"
            },
            "tags_all": {
              "Name": "paul-gateway"
            },
            "vpc_id": "vpc-0263c1d900e5343ec"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323170648141:loadbalancer/net/paul-lb/f1a3a8657af2b0ac",
            "arn_suffix": "net/paul-lb/f1a3a8657af2b0ac",
            "dns_name": "paul-lb-f1a3a8657af2b0ac.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:323170648141:loadbalancer/net/paul-lb/f1a3a8657af2b0ac",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "paul-lb",
            "subnet_mapping": [
              {
                "allocation_id": "eipalloc-02427555b9847373a",
                "subnet_id": "subnet-09050b3fce9bb775c"
              }
            ],
            "subnets": [
              "subnet-09050b3fce9bb775c"
            ],
            "vpc_id": "vpc-0263c1d900e5343ec",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_eip.lb-ip",
            "aws_subnet.dev-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323170648141:listener/net/paul-lb/f1a3a8657af2b0ac/34ba6e1a71cb3dae",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:323170648141:targetgroup/paul-lb-target-group-http/588de5724b1a441e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:323170648141:listener/net/paul-lb/f1a3a8657af2b0ac/34ba6e1a71cb3dae",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:323170648141:loadbalancer/net/paul-lb/f1a3a8657af2b0ac",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb-ip",
            "aws_lb.lb",
            "aws_lb_target_group.target-http",
            "aws_subnet.dev-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323170648141:listener/net/paul-lb/f1a3a8657af2b0ac/ba68722a433cc4d2",
            "certificate_arn": "arn:aws:acm:us-east-1:323170648141:certificate/d074902f-3de0-400e-8a56-f23734ffb2f4",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:323170648141:targetgroup/paul-lb-target-group-https/679d121a46195f95",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:323170648141:listener/net/paul-lb/f1a3a8657af2b0ac/ba68722a433cc4d2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:323170648141:loadbalancer/net/paul-lb/f1a3a8657af2b0ac",
            "port": 443,
            "protocol": "TLS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_eip.lb-ip",
            "aws_lb.lb",
            "aws_lb_target_group.target-https",
            "aws_subnet.dev-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323170648141:targetgroup/paul-lb-target-group-http/588de5724b1a441e",
            "arn_suffix": "targetgroup/paul-lb-target-group-http/588de5724b1a441e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:323170648141:targetgroup/paul-lb-target-group-http/588de5724b1a441e",
            "lambda_multi_value_headers_enabled": false,
            "name": "paul-lb-target-group-http",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0263c1d900e5343ec"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323170648141:targetgroup/paul-lb-target-group-https/679d121a46195f95",
            "arn_suffix": "targetgroup/paul-lb-target-group-https/679d121a46195f95",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:323170648141:targetgroup/paul-lb-target-group-https/679d121a46195f95",
            "lambda_multi_value_headers_enabled": false,
            "name": "paul-lb-target-group-https",
            "port": 443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0263c1d900e5343ec"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:323170648141:targetgroup/paul-lb-target-group-http/588de5724b1a441e-20230302220125038300000002",
            "port": 4000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:323170648141:targetgroup/paul-lb-target-group-http/588de5724b1a441e",
            "target_id": "i-0b24d7a1c5e608834"
          },
          "dependencies": [
            "aws_instance.dev-api",
            "aws_lb_target_group.target-http",
            "aws_network_interface.server-nic",
            "aws_security_group.dev-sg",
            "aws_subnet.dev-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323170648141:network-interface/eni-0c6116f7da9db1a4a",
            "attachment": [
              {
                "attachment_id": "eni-attach-0e067e49ba0462527",
                "device_index": 0,
                "instance": "i-0b24d7a1c5e608834"
              }
            ],
            "id": "eni-0c6116f7da9db1a4a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "02:59:15:90:84:9b",
            "owner_id": "323170648141",
            "private_ip": "10.0.0.10",
            "private_ips": [
              "10.0.0.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0bdb6a8b54ce7b277"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09050b3fce9bb775c"
          },
          "dependencies": [
            "aws_security_group.dev-sg",
            "aws_subnet.dev-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323170648141:route-table/rtb-06a992d567b7d1e5c",
            "id": "rtb-06a992d567b7d1e5c",
            "owner_id": "323170648141",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f15f5f6074195611",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f15f5f6074195611",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "paul-route-table"
            },
            "tags_all": {
              "Name": "paul-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0263c1d900e5343ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev-gateway",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02479ca7e5921d345",
            "route_table_id": "rtb-06a992d567b7d1e5c",
            "subnet_id": "subnet-09050b3fce9bb775c"
          },
          "dependencies": [
            "aws_internet_gateway.dev-gateway",
            "aws_route_table.dev-route-table",
            "aws_subnet.dev-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323170648141:security-group/sg-0bdb6a8b54ce7b277",
            "description": "API ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bdb6a8b54ce7b277",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 4000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "paul-vpc-sg",
            "name_prefix": "",
            "owner_id": "323170648141",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "paul-vpc-sg"
            },
            "tags_all": {
              "Name": "paul-vpc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0263c1d900e5343ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-allow_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323170648141:security-group/sg-0dfdd724824654a6e",
            "description": "Allow public traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfdd724824654a6e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "paul-allow_public",
            "name_prefix": "",
            "owner_id": "323170648141",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "paul-allow_public"
            },
            "tags_all": {
              "Name": "paul-allow_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0263c1d900e5343ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323170648141:subnet/subnet-09050b3fce9bb775c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09050b3fce9bb775c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323170648141",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0263c1d900e5343ec"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323170648141:vpc/vpc-0263c1d900e5343ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae6599c00e0b2218",
            "default_route_table_id": "rtb-052fd2758c5717ca7",
            "default_security_group_id": "sg-06b845fd5a8b372ff",
            "dhcp_options_id": "dopt-0bc9299e09e946cc1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0263c1d900e5343ec",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-052fd2758c5717ca7",
            "owner_id": "323170648141",
            "tags": {
              "Name": "paul-vpc"
            },
            "tags_all": {
              "Name": "paul-vpc"
            }
          }
        }
      ]
    }
  ]
}